# examples

func/tf/: CMakeLists.txt  get_top_n.h  get_top_n_impl.h  image.h  image_nostate.cpp  image_state.cpp  image_zygote.cpp
tasks/: tensorflow.py
